--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.1",
     "element-ui": "^1.2.9",
     "vue": "^2.2.6",
+    "vue-infinite-scroll": "^2.0.1",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
