--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "better-scroll": "^0.1.15",
     "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
